--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,4 +1,8 @@
 .header  {
+  padding: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
   font-family: monospace;
   background: papayawhip;
 }
@@ -12,6 +16,9 @@
 }
 
 ul {
+  display: flex;
+  gap: 20px;
+  padding: 0;
   /* this removes the dots on the list items*/
   list-style-type: none;
 }
